<resources>
    <string name="app_name">Notification To Speech</string>
    
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- My own -->
    <string name="description">First you have to do the following once:
       \n 1. Press \'AUTHORIZE\' on the upper right corner.
       \n 2. Activate \'Notification to Speech\'.
       \n 3. Activate the \'Enable\'-Button.
       \nFinish. When you get new Notifications the App-Name should be spoken.
        \n\nNote: This App uses the Sound-Level from \'Music, Video, Games and other Media\' NOT the \'Ringtone and Notification\' Volume.
    </string>
    <string name="action_about">About</string>
    <string name="service_name">Notification to Speech</string>
    <string name="action_authorize">Authorize</string>
    <string name="action_soundSettings">Sound Settings</string>
    <string name="checkbox_service">Enable Service</string>
    <string name="summary_checkbox_service">Starts the \'Notification To Speech\' functionality.</string>
    <string name="switch_screenOff">Screen-Off Mode</string>
    <string name="summary_screenOff">Notifications are only spoken when the screen is off.</string>
    <string name="about_text">
        Copyright © 2014 Simon Jürgensmeyer
        \n\n
        THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

        \n\n
        -----------------------------------
        \n
        Used in this Software:
        \n
        \n
        Notification Listener with Android 4.4:
        \n
        Copyright 2013 Gabriele Mariotti
        \n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
           http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

    <string-array name="history_array">
        <item>You</item>
        <item>Should</item>
        <item>Not</item>
        <item>See</item>
        <item>This</item>
    </string-array>

    <string-array name="content">
        <item>App-Name</item>
        <item>Ticker</item>
        <item>Title</item>
        <item>Text</item>
        <item>Subtext</item>
    </string-array>

    <string-array name="content_values">
        <item>name</item>
        <item>ticker</item>
        <item>title</item>
        <item>text</item>
        <item>subtext</item>
    </string-array>

    <string-array name="volume_array">
        <item>Notification</item>
        <item>Media</item>
        <item>Alarm</item>

    </string-array>
    <string-array name="volume_array_values">
        <item>STREAM_NOTIFICATION</item>
        <item>STREAM_MUSIC</item>
        <item>STREAM_ALARM</item>
    </string-array>

</resources>
